# context-scraper

./: .gitignore  README.md  pyproject.toml
src/: async_utils.py  browser.py  cli.py  config.py  constants.py  crawler.py  fetcher.py  main.py  merger.py  pdf.py  search.py
src/utils/: async_utils.py  httpx_utils.py  playwright_utils.py
