[tool.poetry]
name = "context-scraper"
version = "0.1.0"
description = ""
authors = ["Robert Mertens"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.55.0"
pypdf = "^6.1.1"
beautifulsoup4 = "^4.14.2"
lxml = "^6.0.2"
tqdm = "^4.67.1"
httpx = "^0.28.1"
pydantic = "^2.12.4"

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.1"
isort = "^7.0.0"
pytest = "^8.4.2"
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
